<resources>
    <string name="app_name">LiitecMirror</string>
    <string name="label_protocol" translatable="false">Protocolo</string>
    <string name="label_server_ip" translatable="false">IP del servidor</string>
    <string name="label_server_password" translatable="false">Constraseña del servidor</string>
    <string name="label_video_format" translatable="false">Formato</string>
    <string name="label_video_resolution" translatable="false">Resolución</string>
    <string name="label_video_bitrate" translatable="false">Bitrate</string>
    <string name="action_start" translatable="false">Comenzar</string>
    <string name="action_stop" translatable="false">Detener</string>
    <string name="casting_screen" translatable="false">Casting screen</string>
    <string name="button_saveConfig" translatable="false">Guardar Configuración</string>


    <string-array name="options_protocols">
        <item>TCP</item>
        <item>UDP</item>
        <item>RTMP</item>
    </string-array>

    <string-array name="options_protocols_values">
        <item>TCP</item>
        <item>UDP</item>
        <item>RTMP</item>
    </string-array>

    <string-array name="options_format_keys">
        <item>H264</item>
        <item>VP8</item>
    </string-array>

    <string-array name="options_format_values">
        <item>video/avc</item>
        <item>video/x-vnd.on2.vp8</item>
    </string-array>

    <string-array name="options_resolution_keys">
        <item>1280x720 @ 320</item>
        <item>800x480 @ 160</item>
        <item>640x360 @ 96</item>
    </string-array>

    <string-array name="options_resolution_values">
        <item>1280,720,320</item>
        <item>800,480,160</item>
        <item>640,360,96</item>
    </string-array>

    <string-array name="options_bitrate_keys">
        <item>6 Mbps</item>
        <item>4 Mbps</item>
        <item>2 Mbps</item>
        <item>1 Mbps</item>
    </string-array>

    <string-array name="options_bitrate_values">
        <item>6144000</item>
        <item>4096000</item>
        <item>2048000</item>
        <item>1024000</item>
    </string-array>

    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Liitec</string>
    <string name="nav_header_subtitle">liitec@userena.cl</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="stream_link">Ir a la transmision</string>



    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Configuraciones</string>
    <string name="menu_slideshow">Ir a la transmisión</string>
    <string name="title_activity_main">Screen Mirror</string>
</resources>
