<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.liitec.screenmirror.ui.gallery.GalleryFragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView_protocol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_protocol" />

            <Spinner
                android:id="@+id/spinner_protocol_config"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/options_protocols" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView_server_addr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_server_ip" />

            <EditText
                android:id="@+id/editText_server_host_Config"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="none" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:orientation="vertical">
            <TextView
                android:id="@+id/textView_server_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_server_password" />

            <EditText
                android:id="@+id/editText_server_password_config"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="none" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView_video_format"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_video_format" />
            <Spinner
                android:id="@+id/spinner_video_format_config"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/options_format_keys" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView_video_resolution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_video_resolution" />

            <Spinner
                android:id="@+id/spinner_video_resolution_config"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/options_resolution_keys" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView_video_bitrate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_video_bitrate" />

            <Spinner
                android:id="@+id/spinner_video_bitrate_config"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/options_bitrate_keys" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >

            <Button
                android:id="@+id/button_save_config"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:padding="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="#fff"
                android:text="@string/button_saveConfig" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
